@@ -1,5 +1,5 @@
 #Tue Oct 20 15:27:36 CEST 2009
-versionMicro=5
-versionMinor=1
+versionMicro=0
+versionMinor=2
 versionDate=20091020
 versionMajor=3
