@@ -1,8 +1,16 @@
 UML-Editor 3.2.0 (2010-12-28) 
 ----------------------------------
+- FILE FORMAT CHANGED: 
+-   This version can read old file format.
+-   This version can save old file format with loss
+-   Old versions can read new file format with loss.
+-   use a filename that ends with "-uml1.uml" to save old file format.
+- bug uml file decoder: handle unknown xml file formats
 - bug uml file decoder: "Name" (NlsString) content was replaced by "DefLangName" 
 - seperate setting of model language from user interface language
 - support multilingual models
+- catch emmpty names
+- ili2c-4.3.3
 - bug: DomainDef  selection dialog called by AttributeDef dialog suppressed DomainDefs referenced by dependecies of the ClassDef
 
 UML-Editor 3.1.5 (2009-10-20) 
